--- a/app/views/shared/email/_preparing_for_appointment.text.erb
+++ b/app/views/shared/email/_preparing_for_appointment.text.erb
@@ -9,9 +9,11 @@ Preparing for your appointment
 To make the most of your appointment it would be helpful if you know:
 
 <% if @appointment.due_diligence? %>
-* details of your current pension and provider
-* details of the pension scheme you are looking to transfer to
-* details of where the receiving pension scheme proposes to invest your money
+* details of your current pension scheme and pension scheme you are looking to transfer to, including:
+   * pension type, e.g. defined contribution or defined benefit
+   * pension product name, e.g. SIPP, personal pension, workplace pension, flexible pension plan etc
+   * current and proposed investment strategies including investment funds and asset types
+   * fees and charges for both schemes
 * any information you have from the current provider for the Red or Amber flags raised by them
 * details of your other pension arrangements you may have
 <% else %>
