Bookings can specify PWD appointment attended
Similar to the API change, regular phone appointments will display an
option for the customer to specify whether they have previously
completed a PWD appointment.

--- a/app/views/appointments/preview.html.erb
+++ b/app/views/appointments/preview.html.erb
@@ -49,6 +49,7 @@
   <%= f.hidden_field :referrer %>
   <%= f.hidden_field :small_pots %>
   <%= f.hidden_field :nudged %>
+  <%= f.hidden_field :attended_digital %>
 
   <%= f.hidden_field :data_subject_name %>
   <%= f.hidden_field :data_subject_date_of_birth %>
@@ -184,6 +185,10 @@
               <tr>
                 <td class="active"><b>Customer research consent</b></td>
                 <td><%= @appointment.customer_research_consent %></td>
+              </tr>
+              <tr>
+                <td class="active"><b>Completed an online Pension Wise appointment?</b></td>
+                <td><%= @appointment.attended_digital.to_s.humanize %></td>
               </tr>
               <tr>
                 <td class="active"><b>Type of appointment</b></td>
