--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -50,6 +50,14 @@
       <%= f.radio_button :gdpr_consent, '', label: 'No response', class: 't-gdpr-consent-no-response', disabled: true %>
       <% end %>
     </div>
+
+    <div class="form-group">
+      <p><strong>Have you completed an online Pension Wise appointment?</strong></p>
+      <span class="help-block text-left">This helps us understand how Pension Wise is used.</span>
+      <%= f.radio_button :attended_digital, 'yes', label: 'Yes', class: 't-attended-digital-yes' %>
+      <%= f.radio_button :attended_digital, 'no', label: 'No', class: 't-attended-digital-no' %>
+      <%= f.radio_button :attended_digital, 'not-sure', label: 'Not sure', class: 't-attended-digital-not-sure' %>
+    </div>
     <% end %>
   </div>
 
