--- a/app/views/appointments/preview.html.erb
+++ b/app/views/appointments/preview.html.erb
@@ -51,6 +51,7 @@
   <%= f.hidden_field :small_pots %>
   <%= f.hidden_field :nudged %>
   <%= f.hidden_field :attended_digital %>
+  <%= f.hidden_field :adjustments %>
 
   <%= f.hidden_field :data_subject_name %>
   <%= f.hidden_field :data_subject_date_of_birth %>
@@ -144,8 +145,14 @@
             </tr>
             <tr>
               <td class="active"><b>I require help or an adjustment to help me access my appointment</b></td>
-              <td><%= @appointment.accessibility_requirements %></td>
+              <td><%= boolean_yes_no(@appointment.accessibility_requirements) %></td>
             </tr>
+            <% if @appointment.accessibility_requirements? %>
+            <tr>
+              <td class="active"><b>Adjustments</b></td>
+              <td><%= simple_format(@appointment.adjustments) %></td>
+            </tr>
+            <% end %>
             <% if @appointment.third_party_booking? %>
             <tr>
               <td class="active"><b>Data subject name</b></td>
