--- a/app/views/appointment_mailer/adjustment.html.erb
+++ b/app/views/appointment_mailer/adjustment.html.erb
@@ -22,6 +22,12 @@
   </h1>
 <% end %>
 
+<% if @appointment.notes? %>
+  <h1 style="color: #0F19A0 !important;font-family: Calibri, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
+    The customer has provided additional information or notes regarding their appointment
+  </h1>
+<% end %>
+
 <%= p do %>
   Reference number:
   <br>
