--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -20,6 +20,7 @@
       <%= render 'shared/date_of_birth_form_field', form: f %>
     </div>
   </div>
+  <%= render 'eligibility_reason', form: f %>
 
   <hr>
   <%= render partial: 'personal_details_form', locals: { f: f } %>
