--- a/app/views/appointments/preview.html.erb
+++ b/app/views/appointments/preview.html.erb
@@ -16,6 +16,7 @@
   <%= f.hidden_field :internal_availability %>
   <%= f.hidden_field :rebooked_from_id %>
   <%= f.hidden_field :date_of_birth %>
+  <%= f.hidden_field :nudge_eligibility_reason %>
   <%= f.hidden_field :start_at %>
   <%= f.hidden_field :ad_hoc_start_at %>
   <%= f.hidden_field :end_at %>
