--- a/app/views/shared/email/_appointment_details.text.erb
+++ b/app/views/shared/email/_appointment_details.text.erb
@@ -27,6 +27,8 @@ Email us if you need this information resent or to change or cancel your booking
 <% else %>
 A trained guidance specialist will call you on the number above. They'll repeat the memorable word so you know you're speaking to <%= @appointment.provider %>.
 
+If you’ve asked for an access adjustment, we might contact you beforehand to ask for more details.
+
 Our team are here to help you, please treat them with respect. If you are verbally abusive toward them, they have the right to end the call and you may have to rebook.
 
 Change or cancel your appointment
