Update postcode as it has changed

--- a/app/views/shared/email/_money_helper.html.erb
+++ b/app/views/shared/email/_money_helper.html.erb
@@ -22,7 +22,7 @@
   MoneyHelper collects and stores personal data for the purpose of delivering
   pensions guidance. Full details of our privacy policy, including information on
   your rights in relation to the data we hold can be found at
-  <a href="https://www.moneyhelper.org.uk/privacy">moneyhelper.org.uk/privacy</a>. <% if @appointment.pension_wise? %>Alternatively, please write to Money and Pensions Service, Pension Wise (MoneyHelper), Borough Hall, 138 Cauldwell Street, Bedford, MK42 9AP.<% end %>
+  <a href="https://www.moneyhelper.org.uk/privacy">moneyhelper.org.uk/privacy</a>. <% if @appointment.pension_wise? %>Alternatively, please write to Money and Pensions Service, Pension Wise (MoneyHelper), Borough Hall, 138 Cauldwell Street, Bedford, MK42 9AB.<% end %>
 <% end %>
 
 <%= p do %>
