--- a/app/views/consents/create.html.erb
+++ b/app/views/consents/create.html.erb
@@ -66,7 +66,7 @@ accordance with the Data Protection Act 2018.
 
 <p>
 Please return the completed form to Money and Pensions Service, Pension Wise
-(MoneyHelper), Borough Hall, 138 Cauldwell Street, Bedford, MK42 9AP. Or you
+(MoneyHelper), Borough Hall, 138 Cauldwell Street, Bedford, MK42 9AB. Or you
 can email a scanned copy to: contact.pensionwise@moneyhelper.org.uk. If your
 appointment will be delivered face to face then you can bring the form to the
 appointment.
