Correct display of textarea elements

--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -135,7 +135,7 @@
       <%= f.check_box :smarter_signposted, class: 't-smarter-signposted', label: 'Smarter signposting referral?' %>
     <% end %>
 
-    <%= f.text_area :notes, label: 'Additional information', autocomplete: 'off', maxlength: 1000, class: 't-notes js-notes js-character-limit-input', rows: 6,
+    <%= f.text_area :notes, label: 'Additional information', autocomplete: 'off', maxlength: 1000, class: 't-notes js-notes js-character-limit-input form-control', rows: 6,
                     placeholder: 'Please add any additional information here that may be helpful for the appointment', data: { module: 'character-limit', maxlength: 1000 }
     %>
 
