Include BSL variations

--- a/app/views/shared/email/_appointment_details.html.erb
+++ b/app/views/shared/email/_appointment_details.html.erb
@@ -1,9 +1,19 @@
-<%= p do %>
-  One of our pension specialists will call you on <%= @appointment.phone %> and quote the memorable word you’ve given us (<%= @appointment.memorable_word(obscure: true) %>) – so you know it’s us calling.
-<% end %>
+<% if @appointment.bsl_video? %>
+  <%= p do %>
+    This is a video appointment with a British Sign Language interpreter.
+  <% end %>
 
-<%= p do %>
-  Your appointment will usually last around 60 minutes. <% if @appointment.pension_wise? %>If you’ve asked for an access adjustment, we might contact you beforehand to ask for more details.<% end %>
+  <%= p do %>
+    You will be sent further information and a link to access your video appointment that only you and the guidance specialist can join. They’ll repeat the memorable word so you know you’re speaking to <%= @appointment.provider %>.
+  <% end %>
+<% else %>
+  <%= p do %>
+    One of our pension specialists will call you on <%= @appointment.phone %> and quote the memorable word you’ve given us (<%= @appointment.memorable_word(obscure: true) %>) – so you know it’s us calling.
+  <% end %>
+
+  <%= p do %>
+    Your appointment will usually last around 60 minutes. <% if @appointment.pension_wise? %>If you’ve asked for an access adjustment, we might contact you beforehand to ask for more details.<% end %>
+  <% end %>
 <% end %>
 
 <%= p do %>
