--- a/app/views/shared/email/_appointment_details.text.erb
+++ b/app/views/shared/email/_appointment_details.text.erb
@@ -1,6 +1,12 @@
+<% if @appointment.bsl_video? %>
+This is a video appointment with a British Sign Language interpreter.
+
+You will be sent further information and a link to access your video appointment that only you and the guidance specialist can join. They’ll repeat the memorable word so you know you’re speaking to <%= @appointment.provider %>.
+<% else %>
 One of our pension specialists will call you on <%= @appointment.phone %> and quote the memorable word you’ve given us (<%= @appointment.memorable_word(obscure: true) %>) – so you know it’s us calling.
 
 Your appointment will usually last around 60 minutes. <% if @appointment.pension_wise? %>If you’ve asked for an access adjustment, we might contact you beforehand to ask for more details.<% end %>
+<% end %>
 
 You’ll need to rebook if:
   * you’re not available at your appointment time or
