Corrections to generic MoneyHelper copy

--- a/app/views/shared/email/_money_helper.html.erb
+++ b/app/views/shared/email/_money_helper.html.erb
@@ -17,7 +17,7 @@
 </ul>
 
 <%= p do %>
-  For personalised money and pensions advice, you’ll usually need to pay for advice. See our guides about <a href="https://www.moneyhelper.org.uk/en/getting-help-and-advice/financial-advisers">Financial advice</a> for more information.
+  If you want personalised money and pensions advice, including specific recommendations, you usually need to pay for advice. See our guides about <a href="https://www.moneyhelper.org.uk/en/getting-help-and-advice/financial-advisers">Financial advice</a> for more information.
 <% end %>
 
 <%= p do %>
