--- a/app/views/shared/email/_money_helper.text.erb
+++ b/app/views/shared/email/_money_helper.text.erb
@@ -7,7 +7,7 @@ We’re not regulated or authorised by the Financial Conduct Authority (FCA), so
   * recommend specific financial products
   * tell you what the best option is for you.
 
-For personalised money and pensions advice, you’ll usually need to pay for advice. See our guides about https://www.moneyhelper.org.uk/en/getting-help-and-advice/financial-advisers Financial advice for more information.
+If you want personalised money and pensions advice, including specific recommendations, you usually need to pay for advice. See our guides about https://www.moneyhelper.org.uk/en/getting-help-and-advice/financial-advisers Financial advice for more information.
 
 MoneyHelper collects and stores personal data for the purpose of delivering pensions guidance. For full details and your rights, see our https://www.moneyhelper.org.uk/privacy privacy policy.
 
