Corrections to PSG preparative email copy

--- a/app/views/shared/email/_preparing_for_appointment.text.erb
+++ b/app/views/shared/email/_preparing_for_appointment.text.erb
@@ -22,14 +22,14 @@ During the appointment, you’ll be asked for details of the pension transfer yo
 
 It’s helpful if you can find out:
 
-1. The type of pension you already have (usually defined contribution or defined benefit and the name of the product (like a personal or workplace pension).
+1. The type of pension you already have – usually defined contribution or defined benefit – and the name of the product, like a personal or workplace pension.
 2. The type and name of the pension scheme you want to transfer to.
 3. The fees and charges for both schemes.
-4. How both schemes plan to invest your money, including the funds or types of asset they use.
+4. How both schemes plan to invest your money, including the funds or types of asset they use – you can ask each pension provider if you’re not sure.
 5. If your existing pension provider will tell you why your transfer has been delayed.
 
 It’s also useful to:
 
-* have information about any other pension you might have
-* think about your plans for retirement, including when you want to start taking your pension and other sources of income.
+* have information about all the sources of retirement income you might have, including other pensions
+* think about your plans for retirement, including when you want to start taking your pension and when you’d like to stop working or reduce your hours.
 <% end %>
