--- a/app/views/shared/email/_preparing_for_appointment.html.erb
+++ b/app/views/shared/email/_preparing_for_appointment.html.erb
@@ -51,10 +51,10 @@
   <% end %>
 
   <ol style="color: #0B0C0C;font-family: Calibri, Arial, sans-serif;margin-top: 15px;margin-bottom: 15px;font-size: 16px;line-height: 1.315789474;">
-    <li>The type of pension you already have (usually defined contribution or defined benefit and the name of the product (like a personal or workplace pension).</li>
+    <li>The type of pension you already have – usually defined contribution or defined benefit – and the name of the product, like a personal or workplace pension.</li>
     <li>The type and name of the pension scheme you want to transfer to.</li>
     <li>The fees and charges for both schemes.</li>
-    <li>How both schemes plan to invest your money, including the funds or types of asset they use.</li>
+    <li>How both schemes plan to invest your money, including the funds or types of asset they use – you can ask each pension provider if you’re not sure.</li>
     <li>If your existing pension provider will tell you why your transfer has been delayed.</li>
   </ol>
 
@@ -63,7 +63,7 @@
   <% end %>
 
   <ul style="color: #0B0C0C;font-family: Calibri, Arial, sans-serif;margin-top: 15px;margin-bottom: 15px;font-size: 16px;line-height: 1.315789474;">
-    <li>have information about any other pension you might have</li>
-    <li>think about your plans for retirement, including when you want to start taking your pension and other sources of income.</li>
+    <li>have information about all the sources of retirement income you might have, including other pensions</li>
+    <li>think about your plans for retirement, including when you want to start taking your pension and when you’d like to stop working or reduce your hours.</li>
   </ul>
 <% end %>
