Add screen for customer reschedulings

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -9,6 +9,7 @@
 
     <% if current_user.resource_manager? %>
       <%= active_link_to 'Allocations', allocations_path, wrap_tag: :li %>
+      <%= active_link_to 'Online reschedulings', online_reschedulings_path, wrap_tag: :li %>
     <% end %>
 
     <% if current_user.guider? %>
