--- a/app/views/online_reschedulings/index.html.erb
+++ b/app/views/online_reschedulings/index.html.erb
@@ -52,6 +52,7 @@
       <th>Guider</th>
       <th>Appointment Date/Time</th>
       <th>Rescheduled Date/Time</th>
+      <th>Processed</th>
     </tr>
   </thead>
   <tbody class="list" data-module="search-highlight">
@@ -63,6 +64,7 @@
         <td class="appointment-search-results__item"><b class="visible-xs-block">Guider</b><span class="js-allow-highlighting t-previous-guider-name"><%= result.previous_guider_name %></span> <small>(<%= result.previous_guider_organisation %>)</small></td>
         <td class="appointment-search-results__item t-appointment-date-time"><b class="visible-xs-block">Appointment Date/Time</b><%= result.date %></td>
         <td class="appointment-search-results__item t-rescheduled-date-time"><b class="visible-xs-block">Rescheduled Date/Time</b><%= result.rescheduled_at %></td>
+        <td class="appointment-search-results__item t-processed"><b class="visible-xs-block">Processed</b><%= processed_label(result) %></td>
       </tr>
     <% end %>
   </tbody>
